# mind-to-project

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
src/mind_to_project/: __init__.py  cli.py  config.py  config_scaffold.py  pipeline.py  prompts.py
src/project_init/: __init__.py  cli.py  config.py  config_scaffold.py  errors.py  pipeline.py  prompts.py
tests/: conftest.py  test_cli.py  test_config.py  test_pipeline.py  test_prompts.py  test_setup.py
